Changes after KOffice-1.3
=========================
KOfficeCore:
- Changed .desktop file setup so that changes to the K menu structure,
  to file-program associations, or other distribution customizations cannot
  prevent KOffice applications from starting.

KoText:
- Date variables for printing-date, last-modified, and creation-date were
  not loaded correctly.

Changes after KOffice-1.3-rc1
=============================
KOfficeCore:
- Fixed doc/window association which led to closing all windows when closing only one.

KoText:
- Fixed rare crash when applying a format to a selection
- Fixed painting bug in text view mode (the right side was being erased).
- Fixed saving of left-to-right direction in RTL paragraphs

KOSpell:
- Fixed bug where the dialog wouldn't show the spell client from the config file

Changes after KOffice-1.3-beta4
===============================
KOfficeCore:
- Restart autosave timer when saving
- Fixes for remote documents (authentication dialog not on top, error handling)
- Restore ability to detect documents without extension (was broken by KDE-3.2-alpha's KZip)
KOSpell:
- Many stability fixes
KoText:
- Fixed missed hit during search-replace backwards with a single paragraph

Changes after KOffice-1.3-beta3
===============================
KOfficeCore:
- Fixed saving of the window size when closing
- Cache the configuration object around kofficerc, to improve startup performance
KoText:
- Improve hierarchical numbering - doesn't require using a suffix of '.' anymore,
and doesn't copy over the prefix and suffix from parent levels anymore (#40911).
- PgUp/PgDown works better than before when "move the caret" is enabled (#45246)
- Fixed painting of non-breakable-spaces (could show up as a visible square)
- Implemented painting of non-breakable-spaces when "draw formatting characters" is on
- Fixed crash (e.g. happening with 'section title' variable, #61735)
- Fixed pasting of plain text (so that it creates new pages if necessary, #58651)
